packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/post.svelte
<form method="post">
	<button type="submit" id="submit">Submit</button>
</form>
